--- a/DenzelProject/static/css/main.css
+++ b/DenzelProject/static/css/main.css
@@ -1,29 +1,52 @@
-#topMenu {
-    display: flex;
-    flex-direction: row;
-    height: 10rem;
-    justify-content: space-between;
-    align-items: center;
-}
-
 #heading {
     color:white;
-    font-family: 'Koulen', cursive;
+    font-family: 'Koulen';
+    font-size: 7rem;
+    text-align: center;
+}
+
+#heading-container {
+    width: 100%;
+    height: 10rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#mainContainer {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    align-items: center;
+    justify-content: space-between;
 }
 
 #logoutBtn {
     color:white;
     font-size: xx-large;
+    padding:1rem;
+    font-size: xx-large;
+    margin-top: 2rem;  
 }
 
-#logoutBtn>span:hover {
+#logoutBtn>i:hover {
     background-color: transparent;
     display: block;
-    box-shadow: 7px 7px 10px #607d8b;
+    box-shadow: 7px 7px 10px #6699CC;
+    font-size: xx-large;  
+    padding:1rem;
+    position: absolute;
 }
 
 #stripes {
-    font-size: xx-large;
+    font-size: 3rem;
     color:white;
-    /* position: fixed; */
+    position: fixed;
+    padding:1rem;
+    background-color: transparent;
+}
+
+
+.hov-btn:hover {
+    background-color: #607D81!important;
 }
