--- a/DenzelProject/templates/main/mainClean.html
+++ b/DenzelProject/templates/main/mainClean.html
@@ -17,6 +17,7 @@
     <link href="//fonts.googleapis.com/css?family=Roboto|Open+Sans:200,300,400,700,800,900&amp;subset=latin"
           rel="preload" as="font"/>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet"> 
     
     <link rel="icon" type="image/ico" href="{% static 'images/favicon.ico'%}">
 
