--- a/DenzelProject/templates/posts/post-details.html
+++ b/DenzelProject/templates/posts/post-details.html
@@ -33,10 +33,9 @@
                     <p>Title: {{ object.header }}</p>
                     <div id="pst-img-container">
                         {% if post.image %}
-                        <img src="{{ object.image.url }}" style="width:100%; height:30%; object-fit: cover">
+                        <img src="{{ object.image.url }}">
                         {% else %}
-                        <img style="width:100%; height:30%;" class="w3-round"
-                            src="{% static 'images/target.jpg' %}">
+                        <img class="w3-round" src="{% static 'images/target.jpg' %}">
                         {% endif %}
                         {% if owner.pk == request.user.pk %}
                         <div class="w3-dropdown-hover">
@@ -116,6 +115,9 @@
     document.querySelector('#stripes').style.color = 'white';
     document.querySelector('#heading').style.color = 'black';
     document.querySelector('#heading').style.maxWidth = '60rem';
+    document.querySelector('#heading').style.paddingTop = '7rem';
+    document.querySelector('#heading').style.position = 'absolute';
+    document.querySelector('#heading-container').style.position = 'absolute';
     document.querySelector('h1').style.zIndex = '1';
 </script>
 {% endblock %}
