--- a/DenzelProject/templates/profile/login.html
+++ b/DenzelProject/templates/profile/login.html
@@ -2,7 +2,7 @@
 {% block formContent %}
     <body id="reg">
     <form method="POST" class="form w3-container w3-display-middle" enctype="multipart/form-data">
-        <div style="padding-top: 10px;" class="w3-container w3-blue-grey">
+        <div style="padding-top: 10px; width:100%; text-align: center;" class="w3-blue-grey">
           <h2>Login</h2>
         </div>
         {{ form }}
