--- a/DenzelProject/templates/contacts.html
+++ b/DenzelProject/templates/contacts.html
@@ -1,7 +1,7 @@
 {% extends 'main/main.html' %} {% block content %}
 
 <body id="contactspage">
-  <div style="box-shadow: 0 0 10px #000;background-color: rgba(0, 0, 0, 0.2);" class="w3-padding-large">
+  <div style="box-shadow: 0 0 10px #000;background-color: rgba(0, 0, 0, 0.2);" id="bg-shadow">
 
     <div class="row-contactsContainer">
       <div class="contactsContent">
@@ -36,8 +36,12 @@
 
   </div>
   <script>
-    document.querySelector("#topMenu h1").style.color = "white";
-    document.querySelector("#logoutBtn").style.color = "white";
+    if(document.querySelector("#logoutBtn")){
+      document.querySelector("#logoutBtn").style.color = "white";
+    }
+    document.querySelector("#heading-container").style.position = "absolute";
+
+
   </script>
 </body>
 {% endblock %}
