Fixed edit-profile,delete-profile page style

--- a/DenzelProject/templates/profile/delete-profile.html
+++ b/DenzelProject/templates/profile/delete-profile.html
@@ -2,7 +2,7 @@
 {% block content %}
     <body id="reg">
     <form class="form w3-display-middle" method="POST" enctype="multipart/form-data">
-        <div style="padding-top: 10px;" class="w3-container w3-blue-grey">
+        <div style="text-align: center;" class="w3-container w3-blue-grey">
           <h2>Are you sure you want to delete your profile? </h2>
         </div>
         {{ form }}
