--- a/DenzelProject/templates/profile/edit-profile.html
+++ b/DenzelProject/templates/profile/edit-profile.html
@@ -2,7 +2,7 @@
 {% block content %}
     <body id="reg">
     <form class="form w3-display-middle" method="POST" enctype="multipart/form-data">
-        <div style="padding-top: 10px;" class="w3-container w3-blue-grey">
+        <div style="width:100%" class="w3-container w3-blue-grey">
           <h2 class="w3-center">Update your Profile Info</h2>
         </div>
         {{ form }}
