--- a/DenzelProject/templates/profile/change-password.html
+++ b/DenzelProject/templates/profile/change-password.html
@@ -2,9 +2,9 @@
 
 {% block formContent %}
     <body id="reg">
-    <form method="POST" class="form w3-container w3-display-middle"
+    <form style="color:white;" method="POST" class="form w3-container w3-display-middle"
           enctype="multipart/form-data">
-        <div style="padding-top: 10px;" class="w3-container w3-blue-grey">
+        <div style="width:100%; padding-top:1rem; text-align:center;" class="w3-container w3-blue-grey">
             <h2>Change your password</h2>
         </div>
         {{ form }}
