--- a/DenzelProject/templates/posts/create-post.html
+++ b/DenzelProject/templates/posts/create-post.html
@@ -1,8 +1,8 @@
 {% extends 'main/main.html' %}
 {% block content %}
 {% load static %}
-<body id="crpstpage">
-    <form method="POST" class="form w3-display-middle w3-container" enctype="multipart/form-data">
+<body class="pst-body">
+    <form method="POST" class="pst-form w3-display-middle w3-container" enctype="multipart/form-data">
         <div style="color:white" class="w3-container">
           <h2 class="w3-center">Upload your Denzel story</h2>
         </div>
