--- a/DenzelProject/templates/posts/delete-post.html
+++ b/DenzelProject/templates/posts/delete-post.html
@@ -2,8 +2,8 @@
 {% load static %}
 {% block content %}
 
-<body id="crpstpage">
-    <form class="form w3-display-bottommiddle" method="POST" enctype="multipart/form-data">
+<body class="pst-body">
+    <form class="pst-form w3-display-bottommiddle" method="POST" enctype="multipart/form-data">
         {% if object.image %}
             <img class="w3-display-topmiddle"
                 style="margin-top:20px; height:200px; width: 200px; object-fit: cover"
