--- a/DenzelProject/templates/profile/change-password.html
+++ b/DenzelProject/templates/profile/change-password.html
@@ -1,7 +1,7 @@
 {% extends 'main/mainForm.html' %}
 
 {% block formContent %}
-    <body id="reg">
+    <body class="log-body">
     <form style="color:white;" method="POST" class="form w3-container w3-display-middle"
           enctype="multipart/form-data">
         <div style="width:100%; padding-top:1rem; text-align:center;" class="w3-container w3-blue-grey">
