--- a/DenzelProject/static/css/post-details-page.css
+++ b/DenzelProject/static/css/post-details-page.css
@@ -1,6 +1,6 @@
 #pstdet {
-    background-image: url(../images/m_merged.png);
-    background-repeat: no-repeat;
+    background: linear-gradient(100deg, rgba(0, 0, 0, 0.3),
+    rgba(0, 0, 0, 0.603)), url(../images/m_merged.png), no-repeat;
     background-attachment: fixed;
     background-position: center;
 }
@@ -12,31 +12,85 @@
     position: absolute;
 }
 
-#pst-div { 
-    max-width:64rem;
-    height:100vh;
-    padding:15rem 4rem 0 4rem; 
-    background-color:white;
-    width: 62rem;
+#pst-main-content{
+    text-align: center;
+    width:50rem;
+}
+
+#comment-section{
+    color:white;
+    width:100%;
+}
+
+#comment-section input{
+    background-color:transparent;
+}
+
+#comment-section input::placeholder{
+    color:white;
 }
 
 #pst-content {
-    max-width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    color:white;
 }
 
 #pst-img-container{
+    position:relative;
+    height:30rem;
+    width:33rem;
     display:flex;
-    flex-direction: row-reverse;
-    height: 28rem;
-    justify-content: flex-end;
+    justify-content: center;
 }
 
-#pst-img-container>img{
-    position:absolute;   
-    max-width:36rem; 
-    max-height:28rem;
-    object-fit: cover;
+#pst-img-container .w3-dropdown-hover{
+    position:absolute;
+    top:0;
+    left:0;
 }
+
+#pst-img-container img{
+    position:absolute;   
+    width:100%; 
+    height:28rem;
+    object-fit: cover;
+    box-shadow: 0px 0px 150px 21px rgba(255, 255, 255, 0.75);
+}
+
+.pst-comment{
+    display:flex;
+    flex-wrap: wrap;
+}
+
+.pst-comment h6{
+    width: 92%;
+}
+
+.contentComment p{
+    padding-left:3rem;
+}
+
+
+@media screen and (max-width: 1700px){
+    #pstdet{
+        background-repeat: repeat;
+        background-position: left;
+    }   
+}
+
+
+@media screen and (max-width: 331px){
+    #pst-comment-buttons{
+        display:flex;
+        flex-direction: column;
+    }
+    #pst-comment-buttons button{
+        margin-top: 0!important;
+    }
+
+    #pst-img-container{
+        width: 80%;
+    }
+}   
