--- a/DenzelProject/static/css/welcome-page.css
+++ b/DenzelProject/static/css/welcome-page.css
@@ -1,57 +1,96 @@
+
 #welcome {
     background-image: url(../images/manonfiregirl.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
-}
-
-.welcome-container {
-    display:flex;
-    flex-direction: column;
-    height: 96vh;
-}
-
-.content-container {
-    display:inline-flex;
-    height: 90%;
-    width:100%;
+    height:95vh;
+    display: flex;
     justify-content: space-between;
-    align-items: center;
+    flex-wrap: wrap;
+    align-items: flex-end;
 }
 
-.log-content {
-    color: white;
-    background-color: black;
-    border-radius: 0.5rem;
-    padding: 2rem;
-}
-
-#take-tour-btn {
-    background: black;
-    padding: 2rem;
-    color: white;
-    border-radius: 0.5rem;
-}
-
-.log-btn {
-    border-radius: 0.5rem;
-    color: white;
-}
-
-.log-btns-container {
-    display:flex;
-    flex-direction: column;
+#content-container{
+    display: flex;
     justify-content: space-between;
-    min-height: 8rem;
+    width: 100vw;
+    vertical-align: center;
 }
 
-#header {
-    font-family: 'Koulen', cursive;
-    font-size: 9rem;
-    text-align: center;
-    height: 10%;
+#log-card{
+    background-color: rgba(55,71,69,255);
     color:white;
-    padding: 0 auto;
-    background-color: rgba(0, 0, 0, 0.5);
-    border-radius: 5px;
-    box-shadow: 0 0 10px #000;
+    border-radius: 5%;
+    padding: 2rem;
+    height: fit-content;
+    box-shadow: 0px 0px 30px 4px #000000;
+    text-align: center;
+}
+
+#log-card:hover{
+    background-color: transparent;
+}
+
+#row-welcome {
+    display:flex;
+    justify-content: space-between;
+    width: 100vw;
+}
+
+#tour-btn{
+    background-color: rgba(198,71,34,255);
+    height: fit-content;
+    padding:1.5rem;
+    border-radius: 5%;
+    color:black;
+    box-shadow: 0px 0px 30px 4px #000000;
+    align-self: center;
+}
+
+#tour-btn:hover{
+    background-color: transparent;
+    color:white;
+    box-shadow: 0px 0px 30px 4px #000000;
+    align-self: center;
+}
+
+#header{
+    width:100vw;
+    background: linear-gradient(90deg, rgba(57,57,57,1) 0%, rgba(55,71,69,1) 35%, rgba(198,71,34,1) 100%);
+    height: fit-content;
+    font-size:7rem;
+    text-align: center;
+    color:white;
+    box-shadow: 0px 0px 30px 4px #000000;
+}
+
+
+@media screen and (max-width: 1518px){
+    #welcome{
+        height: 101vh;
+        background-position: center;
+        background-position-y: 0rem;
+        background-size: unset;
+    }
+}
+
+@media screen and (max-width: 700px){
+    #welcome{
+        background-size: auto;
+        background-position-x: -62rem;
+        flex-direction: column;
+        justify-content: flex-end;
+        height: 101vh;
+        overflow: hidden;
+    }
+
+    #header{
+        font-size: 4rem;
+        padding: 2rem 0;
+    }
+
+    #row-welcome{
+        flex-direction: column;
+        margin-bottom: 6rem;
+    }
 }
