--- a/DenzelProject/templates/posts/edit-post.html
+++ b/DenzelProject/templates/posts/edit-post.html
@@ -2,8 +2,8 @@
 {% load static %}
 {% block content %}
 
-<body id="crpstpage">
-  <form class="w3-container form" method="POST" enctype="multipart/form-data">
+<body class="pst-body">
+  <form class="w3-container pst-form" method="POST" enctype="multipart/form-data">
     {% if object.image %}
     <img style="height:200px; width: 200px; object-fit: cover"
       src="{{ object.image.url }}" alt="">
