--- a/DenzelProject/templates/posts/post-details.html
+++ b/DenzelProject/templates/posts/post-details.html
@@ -20,104 +20,94 @@
         <div style="margin-left: 29%;">
         </div>
     </div>
-    <div id="pst-container">
-        <div id="pst-div"><br>
-            <div id="pst-content">
-                <hr class="w3-clear">
-                <img src="{% static 'images/defaultprofilepic.jpg' %}" alt="Avatar"
-                    class="w3-left w3-circle w3-margin-right" style="width:60px; object-fit:cover">
-                <span class="w3-right w3-opacity">{{ object.created }}</span>
-                <h4>Owner: {{ owner.get_name }}</h4 <hr class="w3-clear">
+    <div id="pst-content">
+        <img src="{% static 'images/defaultprofilepic.jpg' %}" alt="Avatar" class="w3-left w3-circle w3-margin-right"
+            style="width:60px; object-fit:cover">
+        <span class="w3-right w3-opacity">{{ object.created }}</span>
+        <h4>Owner: {{ owner.get_name }}</h4 <hr class="w3-clear">
 
-                <div id="pst-main-content">
-                    <p>Title: {{ object.header }}</p>
-                    <div id="pst-img-container">
-                        {% if post.image %}
-                        <img src="{{ object.image.url }}">
-                        {% else %}
-                        <img class="w3-round" src="{% static 'images/target.jpg' %}">
-                        {% endif %}
-                        {% if owner.pk == request.user.pk %}
-                        <div class="w3-dropdown-hover">
-                            <button class="w3-button w3-ripple w3-black">&#8285;</button>
-                            <div class="w3-dropdown-content w3-bar-block w3-border">
-                                <a href="{% url 'edit-post' object.pk %}" class="w3-bar-item w3-button">Edit</a>
-                                <a href="{% url 'delete-post' object.pk %}" class="w3-bar-item w3-button">Delete</a>
-                            </div>
-                        </div>
-                        {% endif %}
-                    </div>
-                    {% if object.description %}
-                    <p>Description:</p>
-                    <p style="overflow: auto; max-height: 150px; max-width: 500px;">{{ object.description }}</p>
-                    {% endif %}
-
-                    {% if owner.pk != request.user.pk and request.user.is_authenticated %}
-                    <a href="{% url 'post-details-like' object.pk %}" type="button"
-                        class="w3-button w3-theme-d1 w3-margin-bottom"><i class="fa fa-thumbs-up"></i>
-                         Like: {{ likes_count }}</a>
-                    <a href="{% url 'post-details-dislike' object.pk %}" type="button"
-                        class="w3-button w3-theme-d1 w3-margin-bottom"><i class="fa fa-thumbs-down"></i>
-                         Dislike: {{ dislikes_count }}</a>
-                    <button style="padding: 8px 12px;" id="showComments"
-                        class="w3-button w3-theme-d2 w3-margin-bottom"><i class="fa fa-comment"></i>
-                         Comments: {{ comments_count }}
-                    </button>
-                    {% else %}
-                    <p style="padding: 8px 12px; display:inline-flex" class="w3-theme-d1 w3-margin-bottom"><i
-                            class="fa fa-thumbs-up"></i>
-                         Likes: {{ likes_count }}</p>
-                    <p style="padding: 8px 12px; display:inline-flex" class="w3-theme-d1 w3-margin-bottom"><i
-                            class="fa fa-thumbs-down"></i>
-                         Dislikes: {{ dislikes_count }}</p>
-
-                    <button style="padding: 8px 12px; margin-top: 20px;" id="showComments"
-                        class="w3-button w3-theme-d2 w3-margin-bottom"><i class="fa fa-comment"></i>
-                         Comments: {{ comments_count }}
-                    </button>
-                    {% endif %}
+        <p>Title: {{ object.header }}</p>
+        <div id="pst-img-container">
+            {% if post.image %}
+            <img src="{{ object.image.url }}">
+            {% else %}
+            <img class="w3-round" src="{% static 'images/target.jpg' %}">
+            {% endif %}
+            {% if owner.pk == request.user.pk %}
+            <div class="w3-dropdown-hover">
+                <button class="w3-button w3-ripple w3-black">&#8285;</button>
+                <div class="w3-dropdown-content w3-bar-block w3-border">
+                    <a href="{% url 'edit-post' object.pk %}" class="w3-bar-item w3-button">Edit</a>
+                    <a href="{% url 'delete-post' object.pk %}" class="w3-bar-item w3-button">Delete</a>
                 </div>
             </div>
-            <div class="comments-attributes">
-                <input id="user" value="{{ request.user.pk }}" type="hidden">
-                {%csrf_token%}
+            {% endif %}
+        </div>
+        {% if object.description %}
+        <p>Description:</p>
+        <p style="overflow: auto; max-height: 150px; max-width: 500px;">{{ object.description }}</p>
+        {% endif %}
+
+        <div id="pst-comment-buttons">
+            {% if owner.pk != request.user.pk and request.user.is_authenticated %}
+            <a href="{% url 'post-details-like' object.pk %}" type="button"
+                class="w3-button w3-theme-d1 w3-margin-bottom"><i class="fa fa-thumbs-up"></i>
+                 Like: {{ likes_count }}</a>
+            <a href="{% url 'post-details-dislike' object.pk %}" type="button"
+                class="w3-button w3-theme-d1 w3-margin-bottom"><i class="fa fa-thumbs-down"></i>
+                 Dislike: {{ dislikes_count }}</a>
+            <button style="padding: 8px 12px;" id="showComments" class="w3-button w3-theme-d2 w3-margin-bottom"><i
+                    class="fa fa-comment"></i>
+                 Comments: {{ comments_count }}
+            </button>
+            {% else %}
+            <p style="padding: 8px 12px; display:inline-flex" class="w3-theme-d1 w3-margin-bottom"><i
+                    class="fa fa-thumbs-up"></i>
+                 Likes: {{ likes_count }}</p>
+            <p style="padding: 8px 12px; display:inline-flex" class="w3-theme-d1 w3-margin-bottom"><i
+                    class="fa fa-thumbs-down"></i>
+                 Dislikes: {{ dislikes_count }}</p>
+
+            <button style="padding: 8px 12px; margin-top: 20px;" id="showComments"
+                class="w3-button w3-theme-d2 w3-margin-bottom"><i class="fa fa-comment"></i>
+                 Comments: {{ comments_count }}
+            </button>
+            {% endif %}
+        </div>
+        <div class="comments-attributes">
+            <input id="user" value="{{ request.user.pk }}" type="hidden">
+            {%csrf_token%}
+        </div>
+        <div id="comment-section" class="w3-container w3-card w3-margin-bottom">
+            <h2 class="w3-padding-16 w3-display-top"><i
+                    class="fa fa-comment fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Comments
+            </h2>
+            <form method="POST" style="display:flex; flex-direction: row;" id="newCommentForm">
+                <input placeholder="Add Comment" class="w3-input w3-border-0" type="text">
+                <button class="w3-button w3-padding" type="submit">Submit</button>
+            </form>
+            <hr>
+            <div id="commentsContainer">
+    
+    
             </div>
-            <div style="height:500px; display:none;" class="w3-container w3-display-top" id="comments">
-                <div class="w3-container w3-card w3-white w3-margin-bottom">
-                    <h2 class="w3-text-grey w3-padding-16 w3-display-top"><i
-                            class="fa fa-comment fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Comments
-                    </h2>
-                    <form method="POST" style="display:flex; flex-direction: row;" id="newCommentForm">
-                        <input placeholder="Add Comment" class="w3-input w3-border-0" type="text">
-                        <button class="w3-button w3-padding" type="submit">Submit</button>
-                    </form>
-                    <hr>
-                    <div id="commentsContainer">
+            <div id="comment-pagination-container" class="w3-center w3-padding-32">
 
 
-                    </div>
-                </div>
-                <div>
-                    <!-- Pagination -->
-                    <div id="comment-pagination-container" class="w3-center w3-padding-32">
-
-
-                    </div>
-                </div>
             </div>
         </div>
+    </div>
+    <div>
     </div>
 </body>
 <script type="module" src={% static 'javascript/comments.js' %}></script>
 
 <script>
     document.querySelector('#stripes').style.color = 'white';
-    document.querySelector('#heading').style.color = 'black';
-    document.querySelector('#heading').style.maxWidth = '60rem';
-    document.querySelector('#heading').style.position = 'absolute';
-    document.querySelector('#heading-container').style.position = 'absolute';
     document.querySelector('h1').style.zIndex = '1';
-    if(document.querySelector('#logoutBtn')){
+    document.querySelector('#stripes').style.zIndex = '1';
+    document.querySelector('#logoutBtn i').style.zIndex = '1';
+    if (document.querySelector('#logoutBtn')) {
         document.querySelector('#logoutBtn').style.color = 'white';
     } 
 </script>
