--- a/DenzelProject/templates/profile/edit-profile.html
+++ b/DenzelProject/templates/profile/edit-profile.html
@@ -1,7 +1,7 @@
 {% extends 'main/main.html' %}
 {% block content %}
-    <body id="reg">
-    <form class="form w3-display-middle" method="POST" enctype="multipart/form-data">
+    <body class="log-body">
+    <form class="form" method="POST" enctype="multipart/form-data">
         <div style="width:100%" class="w3-container w3-blue-grey">
           <h2 class="w3-center">Update your Profile Info</h2>
         </div>
