Responsive Design Fix

--- a/DenzelProject/templates/profile/delete-profile.html
+++ b/DenzelProject/templates/profile/delete-profile.html
@@ -1,7 +1,7 @@
 {% extends 'main/main.html' %}
 {% block content %}
     <body class="log-body">
-    <form class="form" method="POST" enctype="multipart/form-data">
+    <form class="pst-form" method="POST" enctype="multipart/form-data">
         <div style="text-align: center;" class="w3-container w3-blue-grey">
           <h2>Are you sure you want to delete your profile? </h2>
         </div>
